syntax = "proto3";
package grit.v2.api;

option go_package = "github.com/gritcli/grit/api";

service API {
    // Sources lists the configured repository sources.
    rpc Sources(SourcesRequest) returns (SourcesResponse);

    // ResolveRemoteRepo resolves repository name, URL or other identifier to a
    // list of candidate repositories.
    rpc ResolveRemoteRepo(ResolveRemoteRepoRequest) returns (stream ResolveRemoteRepoResponse);

    // Clone makes a local clone of a repository from a source.
    rpc Clone(CloneRequest) returns (stream CloneResponse);

    // SuggestRepo returns a list of repository names to be used as
    // suggestions for completing a partial repository name.
    rpc SuggestRepo(SuggestRepoRequest) returns (SuggestResponse);
}

message SourcesRequest {
}

message SourcesResponse {
    repeated Source sources = 1;
}

message Source {
    string name = 1;
    string description = 2;
    string status = 3;
    string base_clone_dir = 4;
}

message RemoteRepo {
    string id = 1;
    string source = 2;
    string name = 3;
    string description = 4;
    string web_url = 5;
}

message LocalRepo
{
    RemoteRepo remote_repo = 1;
    string absolute_clone_dir = 2;
}

message ClientOptions {
    bool capture_debug_log = 1;
}

message ClientOutput {
    string message = 1;
    bool is_debug = 2;
}

message ResolveRemoteRepoRequest {
    ClientOptions client_options = 1;
    string query = 2;
}

message ResolveRemoteRepoResponse {
    oneof response {
        ClientOutput output = 1;
        RemoteRepo remote_repo = 2;
    }
}

message CloneRequest {
    ClientOptions client_options = 1;
    string source = 2;
    string repo_id = 3;
}

message CloneResponse {
    oneof response {
        ClientOutput output = 1;
        LocalRepo local_repo = 2;
    }
}

enum SuggestRepoFilter {
    SUGGEST_ANY = 0;
    SUGGEST_LOCAL_ONLY = 1;
    SUGGEST_REMOTE_ONLY = 2;
}

message SuggestRepoRequest {
    string word = 1;
    SuggestRepoFilter filter = 2;
}

message SuggestResponse {
    repeated string words = 1;
}
